--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:5PdGgRonlbM6YaE8zZ0HsuKPwSpdyDoaHVGLzc/XwSg=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,11 +11,11 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=DBWisp
 DB_USERNAME=root
 DB_PASSWORD=
 
-APP_LOCALE=es
+APP_LOCAL=es
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
